# hrr-stack-template

./: .gitignore  .gitmodules  LICENSE  README.md  hrr-stack-template.cabal  stack.yaml  test-hrr.cabal
app/: Main.hs
src/: Lib.hs
