name:                test-hrr
version:             0.1.0.0
synopsis:            A test project to HRR
description:         Please see README.md
homepage:            http://github.com/githubuser/test-hrr#readme
license:             BSD3
license-file:        LICENSE
author:              Hiroshi Hatake
maintainer:          cosmo0920.wp@gmail.com
copyright:           2015 Hiroshi Hatake
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base                  >= 4.7   && < 5
                     , relational-record     >= 0.1.2 && < 0.2
                     , relational-schemas    >= 0.1.1 && < 0.2
                     , sql-words             >= 0.1.3 && < 0.2
                     , names-th              >= 0.2   && < 0.3
                     , persistable-record    >= 0.1   && < 0.2
                     , relational-query      >= 0.6.3 && < 0.7
                     , relational-query-HDBC >= 0.3.1 && < 0.4
                     , HDBC                  >= 2.4.0 && < 2.5
                     , HDBC-session          >= 0.1   && < 0.2
                     , HDBC-postgresql       >= 2.3.2 && < 2.4
  default-language:    Haskell2010

executable test-hrr-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , test-hrr
  default-language:    Haskell2010

test-suite test-hrr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , test-hrr
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cosmo0920/test-hrr
